--- a/framework/package.json
+++ b/framework/package.json
@@ -1,13 +1,55 @@
 {
-  "name": "framework",
-  "version": "0.0.1",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "serve": "polymer serve --npm",
-    "build": "polymer build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+ "name": "framework",
+ "version": "0.0.1",
+ "description": "",
+ "main": "index.js",
+ "scripts": {
+  "dev": "rm -rf dist && rollup -cw",
+  "build": "rm -rf dist && rollup -c",
+  "comp": "polymer serve --npm"
+ },
+ "keywords": [],
+ "author": "lawler61",
+ "license": "ISC",
+ "husky": {
+  "hooks": {
+   "pre-commit": "lint-staged"
+  }
+ },
+ "lint-staged": {
+  "*.js": [
+   "eslint --fix",
+   "prettier --write",
+   "git add"
+  ]
+ },
+ "dependencies": {
+  "@polymer/polymer": "^3.4.1",
+  "core-js": "^3.6.5",
+  "hammerjs": "^2.0.8",
+  "regenerator-runtime": "^0.13.5"
+ },
+ "devDependencies": {
+  "@babel/core": "^7.10.4",
+  "@babel/plugin-transform-runtime": "^7.10.4",
+  "@babel/preset-env": "^7.10.4",
+  "@rollup/plugin-babel": "^5.0.4",
+  "@rollup/plugin-commonjs": "^13.0.0",
+  "@rollup/plugin-image": "^2.0.5",
+  "@rollup/plugin-json": "^4.1.0",
+  "@rollup/plugin-node-resolve": "^8.1.0",
+  "@rollup/plugin-replace": "^2.3.3",
+  "@webcomponents/webcomponentsjs": "^2.4.3",
+  "eslint": "^7.3.1",
+  "eslint-config-prettier": "^6.11.0",
+  "eslint-plugin-prettier": "^3.1.4",
+  "eslint-plugin-standard": "^4.0.1",
+  "fs-extra": "^9.0.1",
+  "husky": "^4.2.5",
+  "lint-staged": "^10.2.11",
+  "polymer-cli": "^1.9.11",
+  "prettier": "^2.0.5",
+  "rollup": "^2.18.2",
+  "rollup-plugin-terser": "^6.1.0"
+ }
 }
