--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ local.properties
 .DS_Store
 build
 android/app/build
+android/app/src/main/assets/*.zip
 captures
 .externalNativeBuild
 .cxx
@@ -21,3 +22,9 @@ package-lock.json
 *.bak
 
 framework/dist
+framework/*.zip
+
+mini/*.zip
+
+pack/_tmp
+pack/*.zip
