--- a/pack/package.json
+++ b/pack/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "cross-env NODE_ENV=develop node index.js",
+    "dev": "cross-env NODE_ENV=develop nodemon",
     "build": "cross-env NODE_ENV=production node index.js"
   },
   "author": "lawler61",
@@ -14,7 +14,6 @@
     "@babel/generator": "^7.10.4",
     "@babel/parser": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
-    "@babel/preset-react": "^7.10.4",
     "@babel/traverse": "^7.10.4",
     "@babel/types": "^7.10.4",
     "archiver": "^4.0.1",
@@ -24,6 +23,7 @@
     "ejs": "^3.1.3",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
-    "html-minifier": "^4.0.0"
+    "html-minifier": "^4.0.0",
+    "nodemon": "^2.0.4"
   }
 }
