--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "bootstrap": "node run.js --t bootstrap",
-    "dev": "cross-env NODE_ENV=develop node run.js --t build",
-    "build": "cross-env NODE_ENV=production node run.js --t build"
+    "bootstrap": "yarn && node index.js --cmd install",
+    "dev": "node index.js --cmd dev",
+    "build": "node index.js --cmd build",
+    "run-framework": "yarn --cwd ./framework",
+    "run-pack": "yarn --cwd ./pack",
+    "lint": "eslint && prettier --write"
   },
   "husky": {
     "hooks": {
@@ -13,10 +16,17 @@
     }
   },
   "lint-staged": {
-    "framework/**/*.js,mini/**/*.js,pack/**/*.js": [
-      "eslint",
-      "prettier --write",
-      "git add"
+    "framework/**/*.js": [
+      "yarn lint"
+    ],
+    "pack/**/*.js": [
+      "yarn lint"
+    ],
+    "mini/**/*.js": [
+      "yarn lint"
+    ],
+    "*.{css,html}": [
+      "prettier --write"
     ]
   },
   "author": "lawler61",
@@ -28,14 +38,13 @@
   "homepage": "https://github.com/lawler61/mini-architecture#readme",
   "devDependencies": {
     "commander": "^5.1.0",
-    "cross-env": "^7.0.2",
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-standard": "^4.0.1",
-    "fs-extra": "^9.0.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5"
   }
 }
