chore: dev/build logs

--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,6 @@
   "semi": false,
   "singleQuote": true,
   "jsxSingleQuote": true,
-  "printWidth": 100
+  "printWidth": 100,
+  "arrowParens": "avoid"
 }
