--- a/framework/package.json
+++ b/framework/package.json
@@ -25,6 +25,7 @@
   "@rollup/plugin-node-resolve": "^8.1.0",
   "@rollup/plugin-replace": "^2.3.3",
   "@webcomponents/webcomponentsjs": "^2.4.3",
+  "chalk": "^4.1.0",
   "fs-extra": "^9.0.1",
   "polymer-cli": "^1.9.11",
   "rollup": "^2.18.2",
