--- a/pack/package.json
+++ b/pack/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-env": "^7.10.4",
     "archiver": "^4.0.1",
     "babel-preset-minify": "^0.5.1",
+    "chalk": "^4.1.0",
     "concat-with-sourcemaps": "^1.1.0",
     "cross-env": "^7.0.2",
     "ejs": "^3.1.3",
