--- a/framework/package.json
+++ b/framework/package.json
@@ -1,34 +1,39 @@
 {
- "name": "framework",
- "version": "0.0.2",
- "description": "",
- "scripts": {
-  "dev": "rm -rf dist && rollup -cw",
-  "build": "rm -rf dist && rollup -c",
-  "comp": "polymer serve --npm"
- },
- "author": "lawler61",
- "license": "ISC",
- "dependencies": {
-  "@polymer/polymer": "^3.4.1",
-  "core-js": "^3.6.5",
-  "hammerjs": "^2.0.8",
-  "regenerator-runtime": "^0.13.5"
- },
- "devDependencies": {
-  "@babel/core": "^7.10.4",
-  "@babel/preset-env": "^7.10.4",
-  "@rollup/plugin-babel": "^5.0.4",
-  "@rollup/plugin-commonjs": "^13.0.0",
-  "@rollup/plugin-image": "^2.0.5",
-  "@rollup/plugin-json": "^4.1.0",
-  "@rollup/plugin-node-resolve": "^8.1.0",
-  "@rollup/plugin-replace": "^2.3.3",
-  "@webcomponents/webcomponentsjs": "^2.4.3",
-  "chalk": "^4.1.0",
-  "fs-extra": "^9.0.1",
-  "polymer-cli": "^1.9.11",
-  "rollup": "^2.18.2",
-  "rollup-plugin-terser": "^6.1.0"
- }
+  "name": "@mini-architecture/framework",
+  "version": "0.0.3-beta1",
+  "description": "",
+  "scripts": {
+    "dev": "rm -rf dist && rollup -cw",
+    "build": "rm -rf dist && rollup -c",
+    "web": "polymer serve --npm"
+  },
+  "author": "lawler61",
+  "license": "ISC",
+  "files": [
+    "dist",
+    "template"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "dependencies": {
+    "@polymer/polymer": "^3.4.1",
+    "core-js": "^3.6.5",
+    "hammerjs": "^2.0.8",
+    "regenerator-runtime": "^0.13.5"
+  },
+  "devDependencies": {
+    "@mini-architecture/base": "^0.0.3-beta2",
+    "@rollup/plugin-babel": "^5.0.4",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-image": "^2.0.5",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^8.1.0",
+    "@rollup/plugin-replace": "^2.3.3",
+    "@webcomponents/webcomponentsjs": "^2.4.3",
+    "polymer-cli": "^1.9.11",
+    "rollup": "^2.18.2",
+    "rollup-plugin-terser": "^6.1.0"
+  }
 }
