--- a/mini/package.json
+++ b/mini/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "mini",
-  "version": "0.0.2",
+  "name": "@mini-architecture/mini",
+  "version": "0.0.3-beta1",
   "description": "",
   "author": "lawler61",
-  "license": "ISC"
+  "license": "ISC",
+  "files": [
+    "dist"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  }
 }
