--- a/pack/package.json
+++ b/pack/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "pack",
-  "version": "0.0.2",
+  "name": "@mini-architecture/cli",
+  "version": "0.0.3-beta4",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "ma-pack": "bin/pack.js"
+  },
   "scripts": {
     "dev": "cross-env NODE_ENV=develop nodemon",
     "build": "cross-env NODE_ENV=production node index.js"
   },
   "author": "lawler61",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+  "files": [
+    "src",
+    "android"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "dependencies": {
+    "@mini-architecture/base": "^0.0.3-beta2",
     "archiver": "^4.0.1",
     "babel-preset-minify": "^0.5.1",
-    "chalk": "^4.1.0",
     "concat-with-sourcemaps": "^1.1.0",
-    "cross-env": "^7.0.2",
     "ejs": "^3.1.3",
-    "fs-extra": "^9.0.1",
     "glob": "^7.1.6",
-    "html-minifier": "^4.0.0",
+    "html-minifier": "^4.0.0"
+  },
+  "devDependencies": {
     "nodemon": "^2.0.4"
   }
 }
