--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "mini-architecture",
-  "version": "0.0.2",
+  "name": "@mini-architecture/base",
+  "version": "0.0.3-beta2",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "bootstrap": "yarn && node index.js --cmd install",
     "dev": "node index.js --cmd dev",
@@ -9,6 +10,13 @@
     "run-framework": "cross-env BOOT_ENV=root yarn --cwd ./framework",
     "run-pack": "yarn --cwd ./pack",
     "lint": "eslint && prettier --write"
+  },
+  "files": [
+    "record.gif"
+  ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
   },
   "husky": {
     "hooks": {
@@ -36,16 +44,22 @@
     "url": "git+https://github.com/lawler61/mini-architecture.git"
   },
   "homepage": "https://github.com/lawler61/mini-architecture#readme",
-  "devDependencies": {
+  "dependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "chalk": "^4.1.0",
     "commander": "^5.1.0",
     "cross-env": "^7.0.2",
+    "fs-extra": "^9.0.1",
+    "npm-run-all": "^4.1.5"
+  },
+  "devDependencies": {
     "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5"
   }
 }
