--- a/framework/package.json
+++ b/framework/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/framework",
-  "version": "0.0.3",
+  "version": "0.0.4-beta2",
   "description": "",
   "scripts": {
     "dev": "rm -rf dist && rollup -cw",
@@ -25,7 +25,8 @@
     "regenerator-runtime": "^0.13.5"
   },
   "devDependencies": {
-    "@mini-architecture/base": "^0.0.3",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "@rollup/plugin-babel": "^5.0.4",
     "@rollup/plugin-commonjs": "^13.0.0",
     "@rollup/plugin-image": "^2.0.5",
@@ -33,6 +34,8 @@
     "@rollup/plugin-node-resolve": "^8.1.0",
     "@rollup/plugin-replace": "^2.3.3",
     "@webcomponents/webcomponentsjs": "^2.4.3",
+    "chalk": "^4.1.0",
+    "fs-extra": "^9.0.1",
     "polymer-cli": "^1.9.11",
     "rollup": "^2.18.2",
     "rollup-plugin-terser": "^6.1.0"
