--- a/cli/package.json
+++ b/cli/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@mini-architecture/cli",
-  "version": "0.0.4-beta5",
+  "version": "0.0.4",
   "description": "",
+  "main": "src/index.js",
   "bin": {
     "ma-cli": "bin/index.js"
   },
+  "files": [
+    "src"
+  ],
   "author": "lawler61",
   "license": "ISC",
   "publishConfig": {
@@ -14,9 +18,10 @@
   "dependencies": {
     "@mini-architecture/framework": "^0.0.4-beta2",
     "@mini-architecture/mini": "^0.0.3-beta1",
-    "@mini-architecture/pack": "^0.0.4-beta2",
+    "@mini-architecture/pack": "^0.0.4",
     "chalk": "^4.1.0",
     "commander": "^6.1.0",
+    "fs-extra": "^9.0.1",
     "ignore-by-default": "^2.0.0",
     "nodemon": "^2.0.4"
   }
