--- a/pack/package.json
+++ b/pack/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@mini-architecture/pack",
-  "version": "0.0.4-beta2",
+  "version": "0.0.4",
   "description": "",
-  "main": "index.js",
+  "main": "src/pack.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=develop nodemon",
     "build": "cross-env NODE_ENV=production node index.js"
@@ -10,8 +10,7 @@
   "author": "lawler61",
   "license": "ISC",
   "files": [
-    "src",
-    "android"
+    "src"
   ],
   "publishConfig": {
     "access": "public",
