--- a/cli/package.json
+++ b/cli/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@mini-architecture/cli",
-  "version": "0.0.4",
+  "version": "0.0.5-beta2",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "bin": {
     "ma-cli": "bin/index.js"
   },
@@ -18,7 +18,7 @@
   "dependencies": {
     "@mini-architecture/framework": "^0.0.4-beta2",
     "@mini-architecture/mini": "^0.0.3-beta1",
-    "@mini-architecture/pack": "^0.0.4",
+    "@mini-architecture/pack": "^0.0.5-beta1",
     "chalk": "^4.1.0",
     "commander": "^6.1.0",
     "fs-extra": "^9.0.1",
