--- a/pack/package.json
+++ b/pack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/pack",
-  "version": "0.0.4",
+  "version": "0.0.5-beta1",
   "description": "",
   "main": "src/pack.js",
   "scripts": {
