--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "^4.0.3"
   }
 }
