--- a/devtools/tsconfig.json
+++ b/devtools/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "rootDir": ".",
-    "paths": {
-      "~": ["*"]
-    },
+    "baseUrl": "./",
+    "rootDir": "./",
     "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
