--- a/devtools/package.json
+++ b/devtools/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel serve client/index.html -d dist --no-cache",
-    "build": "cross-env NODE_ENV=production node index.js"
+    "start": "parcel serve client/index.html --no-cache",
+    "build": "parcel build client/index.html -d dist",
+    "aa": "rm -rf ./_dev && ../cli/bin/index.js -m devtools -e @mini -o ./_dev --no-zip"
   },
   "author": "lawler61",
   "license": "ISC",
@@ -14,18 +15,22 @@
     "express": "^4.17.1",
     "express-ws": "^4.0.0",
     "get-port": "^5.1.1",
-    "pack": "file:../pack",
     "ws": "^7.3.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/react-modal": "^3.10.6",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "babel-preset-minify": "^0.5.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "less": "^3.12.2",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
+    "ts-node": "^9.0.0"
   }
 }
