--- a/devtools/package.json
+++ b/devtools/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "parcel serve client/index.html --no-cache",
-    "build": "parcel build client/index.html -d dist",
-    "aa": "rm -rf ./_dev && ../cli/bin/index.js -m devtools -e @mini -o ./_dev --no-zip"
+    "start": "yarn core && parcel serve client/index.html --no-cache",
+    "build": "rm -rf dist && yarn core && parcel build client/index.html -d dist --public-url /client && ts-node server",
+    "cli": "rm -rf ./_dev && ../cli/bin/index.js -m devtools -e @mini -o ./_dev --no-zip",
+    "core": "rollup -c"
   },
   "author": "lawler61",
   "license": "ISC",
@@ -18,19 +19,24 @@
     "ws": "^7.3.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.12.0",
+    "@rollup/plugin-babel": "^5.0.4",
+    "@rollup/plugin-commonjs": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^8.1.0",
     "@types/express": "^4.17.8",
     "@types/react-modal": "^3.10.6",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "babel-preset-minify": "^0.5.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.2",
     "less": "^3.12.2",
     "parcel-bundler": "^1.12.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "rollup": "^2.30.0",
     "ts-node": "^9.0.0"
   }
 }
