--- a/cli/package.json
+++ b/cli/package.json
@@ -15,6 +15,10 @@
     "access": "public",
     "registry": "https://registry.npmjs.org"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lawler61/mini-architecture.git"
+  },
   "dependencies": {
     "@mini-architecture/framework": "^0.0.4-beta2",
     "@mini-architecture/mini": "^0.0.3-beta1",
