--- a/mini/package.json
+++ b/mini/package.json
@@ -10,5 +10,9 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lawler61/mini-architecture.git"
   }
 }
