--- a/devtools/package.json
+++ b/devtools/package.json
@@ -1,16 +1,21 @@
 {
   "name": "@mini-architecture/devtools",
-  "version": "0.0.1-beta1",
+  "version": "0.0.1-beta2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server/launch.js",
   "scripts": {
-    "pack:mini": "rm -rf build/mini && ../cli/bin/index.js -m devtools -e @mini -o build/mini",
-    "client:build": "rm -rf build/client && parcel build client/index.html -d build/client --no-cache",
-    "dev": "yarn pack:mini && rm -rf build/client && scripts/dev.js",
-    "build": "yarn pack:mini && yarn client:build"
+    "pack:mini": "rm -rf dev/mini && ../cli/bin/index.js pack -m build -e @mini -p devtools -o dev/mini",
+    "dev:client": "yarn pack:mini && rm -rf dev/client && scripts/dev.js",
+    "dev:launcher": "cross-env DEVTOOLS_ENV=develop ts-node index.launch.ts",
+    "build:client": "parcel build client/index.html -d dist/client --no-cache",
+    "build:launcher": "rm -rf dist && tsc -p tsconfig.build.json",
+    "build": "tsc -p . && yarn build:launcher && yarn build:client"
   },
   "author": "lawler61",
   "license": "ISC",
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
@@ -24,11 +29,9 @@
     "chrome-remote-interface": "^0.28.2",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "express-ws": "^4.0.0",
     "get-port": "^5.1.1",
     "glob": "^7.1.6",
-    "node-fetch": "^2.6.1",
-    "ws": "^7.3.1"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -39,6 +42,7 @@
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "cross-env": "^7.0.2",
     "less": "^3.12.2",
     "nodemon": "^2.0.4",
     "open": "^7.3.0",
