--- a/framework/package.json
+++ b/framework/package.json
@@ -11,8 +11,7 @@
   "license": "ISC",
   "files": [
     "dist",
-    "dev",
-    "template"
+    "dev"
   ],
   "publishConfig": {
     "access": "public",
