--- a/devtools/package.json
+++ b/devtools/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@mini-architecture/devtools",
-  "version": "0.0.1-beta2",
+  "version": "0.0.1-beta3",
   "description": "",
   "main": "dist/server/launch.js",
   "scripts": {
-    "pack:mini": "rm -rf dev/mini && ../cli/bin/index.js pack -m build -e @mini -p devtools -o dev/mini",
+    "pack:mini": "rm -rf dev/mini && ../cli/bin/index.js pack -m dev -e @mini -p devtools -o dev/mini",
     "dev:client": "yarn pack:mini && rm -rf dev/client && scripts/dev.js",
     "dev:launcher": "cross-env DEVTOOLS_ENV=develop ts-node index.launch.ts",
     "build:client": "parcel build client/index.html -d dist/client --no-cache",
@@ -29,6 +29,7 @@
     "chrome-remote-interface": "^0.28.2",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-ws": "^4.0.0",
     "get-port": "^5.1.1",
     "glob": "^7.1.6",
     "node-fetch": "^2.6.1"
