--- a/pack/package.json
+++ b/pack/package.json
@@ -2,15 +2,16 @@
   "name": "@mini-architecture/pack",
   "version": "0.0.6-beta2",
   "description": "",
-  "main": "src/pack.js",
+  "main": "dist/index.js",
   "scripts": {
-    "dev": "cross-env MINI_ENV=dev nodemon",
-    "pack:mini": "cross-env MINI_ENV=build node index.js"
+    "pack:dev": "cross-env MINI_ENV=dev nodemon",
+    "pack:build": "cross-env MINI_ENV=build nodemon",
+    "build": "rm -rf dist && tsc -p ."
   },
   "author": "lawler61",
   "license": "ISC",
   "files": [
-    "src",
+    "dist",
     "templates"
   ],
   "publishConfig": {
@@ -34,7 +35,9 @@
     "html-minifier": "^4.0.0"
   },
   "devDependencies": {
+    "@types/node": "^14.14.6",
     "cross-env": "^7.0.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "ts-node": "^9.0.0"
   }
 }
