--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^14.14.6",
     "commander": "^5.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.9.0",
