--- a/devtools/package.json
+++ b/devtools/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/server/launch.js",
   "scripts": {
-    "pack:mini": "rm -rf dev/mini && ../cli/bin/index.js pack -m dev -e @mini -p devtools -o dev/mini",
+    "pack:mini": "rm -rf dev/mini && ../cli/bin/index.js pack -e @mini -m dev -p devtools -o dev/mini",
     "dev:client": "yarn pack:mini && rm -rf dev/client && scripts/dev.js",
     "dev:launcher": "cross-env DEVTOOLS_ENV=develop ts-node index.launch.ts",
     "build:client": "parcel build client/index.html -d dist/client --no-cache",
@@ -40,9 +40,8 @@
     "@types/nodemon": "^1.19.0",
     "@types/parcel-bundler": "^1.12.1",
     "@types/react-modal": "^3.10.6",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-preset-minify": "^0.5.1",
     "cross-env": "^7.0.2",
     "less": "^3.12.2",
     "nodemon": "^2.0.4",
