--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,25 @@
 {
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
   "extends": [
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
   "plugins": [
+    "react",
+    "@typescript-eslint",
     "prettier"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
@@ -13,9 +27,8 @@
     "ma": true
   },
   "rules": {
-    "no-unused-vars": [
-      "warn"
-    ],
+    "react/prop-types": "off",
+    "no-unused-vars": "warn",
     "no-empty": "warn",
     "no-restricted-globals": "off",
     "no-dupe-class-members": "off",
