--- a/framework/package.json
+++ b/framework/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "dev": "rm -rf dist && rollup -cw",
-    "build": "rm -rf dist && rm -rf dev && rollup -c",
+    "build": "rm -rf dist && rollup -c",
     "web": "polymer serve --npm"
   },
   "author": "lawler61",
