--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "bootstrap": "",
-    "build": "",
+    "build": "lerna run build",
     "release": "",
     "framework": "cross-env BOOT_ENV=root yarn --cwd ./framework",
     "lint": "eslint && prettier --write"
@@ -62,7 +62,6 @@
     "@typescript-eslint/parser": "^4.6.1",
     "babel-preset-minify": "^0.5.1",
     "chalk": "^4.1.0",
-    "commander": "^6.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
