--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,6 +25,7 @@
     "@mini-architecture/mini": "^0.0.3",
     "@mini-architecture/pack": "^0.0.6-beta2",
     "commander": "^6.1.0",
+    "chalk": "^4.1.0",
     "fs-extra": "^9.0.1",
     "ignore-by-default": "^2.0.0",
     "nodemon": "^2.0.4"
