--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -8,8 +8,8 @@
     "dev:client": "yarn pack:mini && rm -rf dev/client && scripts/client.ts",
     "dev:launch": "scripts/launch.ts",
     "build:client": "parcel build client/index.html -d dist/client --no-cache",
-    "build:server": "rm -rf dist && tsc -p .",
-    "build": "yarn build:launcher && yarn build:client"
+    "build:server": "rm -rf dist && tsc -p tsconfig.build.json",
+    "build": "yarn build:server && yarn build:client"
   },
   "author": "lawler61",
   "license": "ISC",
@@ -31,6 +31,7 @@
     "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
     "babel-plugin-module-resolver": "^4.0.0",
     "less": "^3.12.2",
     "open": "^7.3.0",
