--- a/packages/mini/package.json
+++ b/packages/mini/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/mini",
-  "version": "0.0.4-beta1",
+  "version": "0.0.3",
   "description": "",
   "author": "lawler61",
   "license": "ISC",
