--- a/.gitignore
+++ b/.gitignore
@@ -19,13 +19,14 @@ yarn-error.log
 package-lock.json
 yarn.lock
 .npmrc
+lerna-debug.log
 
 build
 dist
 !packages/mini/dist
 
 packages/pack/_temp
-packages/pack/_dev.js
+packages/pack/_dev.ts
 
-packages/devtools/dev
 packages/devtools/frontend
+packages/devtools/dev
