--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.4-beta2",
   "description": "",
   "scripts": {
-    "bootstrap": "",
-    "build": "lerna run build",
-    "release": "",
-    "framework": "cross-env BOOT_ENV=root yarn --cwd ./framework",
+    "postinstall": "yarn build",
+    "build": "lerna run build --parallel --ignore @mini-architecture/cli && lerna run build --scope @mini-architecture/cli",
+    "release": "yarn build && lerna version --conventional-commits --no-push",
+    "releasea": "yarn lerna publish from-git",
+    "dev:pack": "lerna run dev --parallel --scope @mini-architecture/framework --scope @mini-architecture/pack",
+    "dev:dt:client": "lerna run client --scope @mini-architecture/devtools --stream",
+    "dev:dt:launch": "lerna run launch --scope @mini-architecture/devtools --stream",
     "lint": "eslint && prettier --write"
   },
   "author": "lawler61",
@@ -24,7 +27,7 @@
     "hooks": {
       "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-publish": "yarn build"
+      "pre-publish": "yarn aa"
     }
   },
   "lint-staged": {
@@ -43,7 +46,7 @@
     "packages/pack/src/*.ts": [
       "yarn lint"
     ],
-    "packages/**/*.{css,html,json}": [
+    "*.{css,html,json}": [
       "prettier --write"
     ]
   },
@@ -73,7 +76,6 @@
     "lerna": "^3.22.1",
     "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
