--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@mini-architecture/devtools",
-  "version": "0.0.1-beta3",
+  "version": "0.0.0",
   "description": "",
   "main": "dist/server/launch.js",
   "scripts": {
-    "pack:mini": "rm -rf dev/mini && ../cli/bin/index.js pack -e @mini -m dev -p devtools -o dev/mini",
-    "dev:client": "yarn pack:mini && rm -rf dev/client && scripts/client.ts",
-    "dev:launch": "scripts/launch.ts",
-    "build:client": "parcel build client/index.html -d dist/client --no-cache",
+    "pack:mini": "rm -rf dist/mini && ma-cli pack -e @mini -p devtools -o dist/mini",
+    "client": "yarn pack:mini && rm -rf dist/client && scripts/client.ts",
+    "launch": "yarn pack:mini && yarn build:client && scripts/launch.ts",
     "build:server": "rm -rf dist && tsc -p tsconfig.build.json",
+    "build:client": "rm -rf dist/client && parcel build client/index.html -d dist/client --no-cache",
     "build": "yarn build:server && yarn build:client"
   },
   "author": "lawler61",
