--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/pack",
-  "version": "0.0.6-beta2",
+  "version": "0.0.5",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
