--- a/packages/pack/tsconfig.json
+++ b/packages/pack/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist"
   },
   "include": ["src"]
