--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,7 +1,4 @@
 {
-  "extends": [
-    "@commitlint/config-conventional",
-    "@commitlint/config-lerna-scopes"
-  ],
+  "extends": ["@commitlint/config-conventional", "@commitlint/config-lerna-scopes"],
   "rules": {}
 }
