--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,37 @@
+// .gitignore
+.DS_Store
+
+*.iml
+.gradle
+local.properties
+.idea
+app/src/main/assets
+captures
+.externalNativeBuild
+.cxx
+
+.project
+*.bak
+*.zip
+
+node_modules
+npm-debug.log
+yarn-error.log
+package-lock.json
+yarn.lock
+.npmrc
+lerna-debug.log
+
+build
+dist
+!packages/mini/**
+
+packages/pack/_temp
+packages/pack/_dev.ts
+
+packages/devtools/frontend
+
+// .eslintignore
 packages/framework/common/insert.js
+
+*.md
