--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/cli",
-  "version": "0.0.6",
+  "version": "0.0.7-beta.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -21,10 +21,10 @@
     "url": "git+https://github.com/lawler61/mini-architecture.git"
   },
   "dependencies": {
-    "@mini-architecture/devtools": "^0.0.1",
+    "@mini-architecture/devtools": "^0.0.2-beta.0",
     "@mini-architecture/framework": "^0.0.5",
     "@mini-architecture/mini": "^0.0.4",
-    "@mini-architecture/pack": "^0.0.6",
+    "@mini-architecture/pack": "^0.0.7-beta.0",
     "chalk": "^4.1.0",
     "commander": "^6.1.0",
     "fs-extra": "^9.0.1",
