--- a/packages/pack/package.json
+++ b/packages/pack/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mini-architecture/pack",
-  "version": "0.0.6",
+  "version": "0.0.7-beta.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
