--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "yarn build && lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-publish": "yarn aa"
     }
@@ -46,12 +46,12 @@
     "@commitlint/config-lerna-scopes": "^11.0.0",
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.6",
-    "@types/nodemon": "^1.19.0",
     "@types/parcel-bundler": "^1.12.1",
     "@types/react-modal": "^3.10.6",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "chalk": "^4.1.0",
+    "chokidar": "^3.4.3",
     "cross-env": "^7.0.2",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
@@ -62,8 +62,8 @@
     "husky": "^4.2.5",
     "lerna": "^3.22.1",
     "lint-staged": "^10.2.11",
-    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
+    "signal-exit": "^3.0.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
