--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,7 +28,6 @@
     "chalk": "^4.1.0",
     "commander": "^6.1.0",
     "fs-extra": "^9.0.1",
-    "ignore-by-default": "^2.0.0",
-    "nodemon": "^2.0.4"
+    "ignore-by-default": "^2.0.0"
   }
 }
