--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -22,6 +22,7 @@
     "url": "git+https://github.com/lawler61/mini-architecture.git"
   },
   "dependencies": {
+    "@mini-architecture/utils": "^0.0.1",
     "chrome-launcher": "^0.13.4",
     "chrome-remote-interface": "^0.28.2",
     "ejs": "^3.1.3",
